# UFMG-RC-TP01

./: .gitignore  Makefile  pyproject.toml
rc_tp01/: client.py  packet.py  pwd_guess.py  server.py
tests/: conftest.py  test_rc_tp01.py
tests_game/: test_jogo.py
