[project]
name = "rc-tp01"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.tasks]
server = "python3 rc_tp01/server.py 5555 2345 6"
client = "python3 rc_tp01/client.py localhost 5555"

demo = """
python3 rc_tp01/server.py 5555 12345678 6 &
sleep 1
python3 rc_tp01/client.py localhost 5555
"""

